@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999950';
+our $VERSION='0.99999951';
 
 
 use 5.005;
